Add main styles

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,3 +16,6 @@ $body-font: 'Poppins', sans-serif;
 
 // size
 $default-font-size: 15px;
+$font-weight-extra-light: 200;
+$font-weight-regular: 400;
+$font-weight-semi-bold: 600;
