--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,5 +12,6 @@ body {
   font-size: $default-font-size;
   background-color: $neutral-very-light-gray;
   max-width: 100vw;
+  min-height: 100vh;
   color: $neutral-very-dark-blue;
 }
