Update styles and change reference name

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
 @import 'src/styles/variables';
 
-* {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -10,8 +12,6 @@
 body {
   font-family: $body-font;
   font-size: $default-font-size;
-  background-color: $neutral-very-light-gray;
-  max-width: 100vw;
-  min-height: 100vh;
-  color: $neutral-very-dark-blue;
+  background-color: $base-background-color;
+  color: $base-text-color;
 }
