Update variable semantic name

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,14 +1,14 @@
 // Colors
 /// Primary
-$primary-red-color: #EA5353FF;
-$primary-cyan-color: #45D3D3FF;
-$primary-orange-color: #FCAF4AFF;
-$primary-blue-color: #549EF2FF;
+$danger-color: #EA5353FF;
+$success-color: #45D3D3FF;
+$warning-color: #FCAF4AFF;
+$info-color: #549EF2FF;
 
 ///Neutral
-$neutral-very-dark-blue: #4C4E61FF;
-$neutral-grayish-blue: #A3A5AEFF;
-$neutral-very-light-gray: #FAFAFAFF;
+$base-text-color: #4C4E61FF;
+$base-paragraph_color: #A3A5AEFF;
+$base-background-color: #FAFAFAFF;
 
 
 // Typography
