--- a/src/components/FeatureSummary.module.scss
+++ b/src/components/FeatureSummary.module.scss
@@ -1,6 +1,5 @@
 @import "../styles/variables";
-
-$font-size: 1.5rem;
+@import "../styles/mixins";
 
 .feature-summary {
   display: flex;
@@ -11,20 +10,16 @@ $font-size: 1.5rem;
   max-width: 460px;
   height: 300px;
 
-  > p:nth-child(1) {
-    font-size: $font-size;
-    text-align: center;
-    font-weight: $font-weight-extra-light;
+  > p:first-child {
+    @include font-style-and-alignment(1.5rem, $font-weight-extra-light, center);
   }
 
   > p:nth-child(2) {
-    font-size: $font-size;
-    text-align: center;
-    font-weight: $font-weight-semi-bold;
+    @include font-style-and-alignment(1.5rem, $font-weight-semi-bold, center);
   }
 
   > p:last-child {
     text-align: center;
-    color: $neutral-grayish-blue;
+    color: $base-paragraph_color;
   }
 }
