Update styles to fit multiple screens

--- a/src/components/FeatureSummary.module.scss
+++ b/src/components/FeatureSummary.module.scss
@@ -12,14 +12,17 @@
 
   > p:first-child {
     @include font-style-and-alignment(1.5rem, $font-weight-extra-light, center);
+    @include animation-fadeIn(0.5s);
   }
 
   > p:nth-child(2) {
     @include font-style-and-alignment(1.5rem, $font-weight-semi-bold, center);
+    @include animation-fadeIn(0.5s);
   }
 
   > p:last-child {
     text-align: center;
     color: $base-paragraph_color;
+    @include animation-fadeIn(0.5s);
   }
 }
