--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,3 +1,5 @@
+//@import "./styles";
+
 @mixin border-side-color($side, $size, $color) {
   border-#{$side}: #{$size}px solid $color;
 }
@@ -6,4 +8,20 @@
   font-size: $size;
   font-weight: $weight;
   text-align: $alignment;
+}
+
+@mixin animation-fadeIn($duration) {
+  animation: fadeIn $duration;
+
+  @keyframes fadeIn {
+    from {
+      margin-left: -30px;
+      opacity: 0;
+    }
+
+    to {
+      margin-left: 0;
+      opacity: 1;
+    }
+  }
 }
